Fix sticky menu precedence in z-index with the fat menu (#582)

--- a/frontend/packages/volto-light-theme/src/theme/_header.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_header.scss
@@ -585,7 +585,7 @@ body.has-toolbar.has-sidebar {
 
     .submenu-wrapper {
       position: absolute;
-      z-index: 11;
+      z-index: 12;
       right: 50%;
       left: 50%;
       width: 100vw;
